--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,10 +26,10 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=
-db.passwordthing.driver=org.sqlite.JDBC
-db.passwordthing.url="jdbc:sqlite:/tmp/passwordthing.sqlite"
-db.passwordthing.user="sa"
-db.passwordthing.password=""
+db.default.driver=org.sqlite.JDBC
+db.default.url="jdbc:sqlite:/tmp/passwordthing.sqlite"
+db.default.user="sa"
+db.default.password=""
 
 # Evolutions
 # ~~~~~
