--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,7 +27,7 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=
 db.default.driver=org.sqlite.JDBC
-db.default.url="jdbc:sqlite:/tmp/passwordthing.sqlite"
+db.default.url="jdbc:sqlite:./passwordthing.sqlite3"
 db.default.user="sa"
 db.default.password=""
 
