Started model for sites (passwords). Switched to PostgreSQL.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,10 +20,10 @@ application.langs="en"
 
 db {
   default {
-    driver:        org.sqlite.JDBC
-    url:           "jdbc:sqlite:./passwordthing.sqlite3"
-    user:          "sa"
-    password:      ""
+    driver:        org.postgresql.Driver
+    url:           "jdbc:postgresql://localhost:5432/passwordthing"
+    user:          "pwthing"
+    password:      "foobar$99"
     logStatements: true
   }
 }
