--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,10 +20,10 @@ application.langs="en"
 
 db {
   default {
-    driver:        org.postgresql.Driver
-    url:           "jdbc:postgresql://localhost:5432/passwordthing"
-    user:          "pwthing"
-    password:      "foobar$99"
+    driver:        org.h2.Driver
+    url:           "jdbc:h2:./passwordthing;MVCC=TRUE"
+    user:          "sa"
+    password:      ""
     logStatements: true
   }
 }
