Back to SQLite. It behaves far better than H2 or Derby. Also, changed "users" table to "appusers", in case "users" is reserved in the RDBMS. (It is with some RDBMSs.) Made some notes (NOTES.md and README.md) on database issues.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,10 +20,8 @@ application.langs="en"
 
 db {
   default {
-    driver:        org.h2.Driver
-    url:           "jdbc:h2:./passwordthing;MVCC=TRUE"
-    user:          "sa"
-    password:      ""
+    driver:        org.sqlite.JDBC
+    url:           "jdbc:sqlite:"${DBPATH}
     logStatements: true
   }
 }
