Added password/user to DB config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,6 +23,8 @@ db {
     driver:        org.sqlite.JDBC
     url:           "jdbc:sqlite:"${DBPATH}
     logStatements: true
+    user: "sa"
+    password: ""
   }
 }
 
